# hatch-gitlab-publish

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
src/hatch_gitlab_publish/: __about__.py  __init__.py
