[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hatch-gitlab-publish"
description = 'Hatch Publisher plugin to support publishing to a GitLab server package registry'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "James Dow", email = "jamesdow21@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = ["hatch"]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/jamesdow21/hatch-gitlab-publish#readme"
Issues = "https://github.com/jamesdow21/hatch-gitlab-publish/issues"
Source = "https://github.com/jamesdow21/hatch-gitlab-publish"

[tool.hatch.version]
path = "src/hatch_gitlab_publish/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/hatch_gitlab_publish --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "src/hatch_gitlab_publish/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
